# public/docs/openapi.yaml
@@ -29,7 +29,326 @@ paths:
       tags:
         - Endpoints
       security: []
+  /api/posts:
+    get:
+      summary: 'Display a listing of the resource.'
+      operationId: displayAListingOfTheResource
+      description: ''
+      parameters: []
+      responses:
+        200:
+          description: 'list of posts'
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  data:
+                    -
+                      id: 1
+                      content: 'Et cumque aut ut eos laudantium ducimus incidunt numquam. Quasi dolorum neque eos atque qui quae voluptatem. Dolor consequatur et voluptate qui. Molestiae magnam fugiat velit molestias blanditiis dolorem sunt. At quia nihil delectus eos aut.'
+                      user:
+                        id: 1
+                        name: 'Prof. Winona Veum'
+                      created_at: '2024-06-23T10:02:05.000000Z'
+                    -
+                      id: 2
+                      content: 'Rem ut quod dignissimos voluptas dicta minus aspernatur consequuntur. Eaque quaerat quae qui velit omnis qui illum. Magnam ea rerum sit quis corporis repellat. Sed distinctio repudiandae assumenda ipsam omnis.'
+                      user:
+                        id: 2
+                        name: 'Eriberto Parisian'
+                      created_at: '2024-06-23T10:02:05.000000Z'
+                  links:
+                    first: '/?page=1'
+                    last: null
+                    prev: null
+                    next: null
+                  meta:
+                    current_page: 1
+                    from: 1
+                    path: /
+                    per_page: 20
+                    to: 2
+                properties:
+                  data:
+                    type: array
+                    example:
+                      -
+                        id: 1
+                        content: 'Et cumque aut ut eos laudantium ducimus incidunt numquam. Quasi dolorum neque eos atque qui quae voluptatem. Dolor consequatur et voluptate qui. Molestiae magnam fugiat velit molestias blanditiis dolorem sunt. At quia nihil delectus eos aut.'
+                        user:
+                          id: 1
+                          name: 'Prof. Winona Veum'
+                        created_at: '2024-06-23T10:02:05.000000Z'
+                      -
+                        id: 2
+                        content: 'Rem ut quod dignissimos voluptas dicta minus aspernatur consequuntur. Eaque quaerat quae qui velit omnis qui illum. Magnam ea rerum sit quis corporis repellat. Sed distinctio repudiandae assumenda ipsam omnis.'
+                        user:
+                          id: 2
+                          name: 'Eriberto Parisian'
+                        created_at: '2024-06-23T10:02:05.000000Z'
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                          example: 1
+                        content:
+                          type: string
+                          example: 'Et cumque aut ut eos laudantium ducimus incidunt numquam. Quasi dolorum neque eos atque qui quae voluptatem. Dolor consequatur et voluptate qui. Molestiae magnam fugiat velit molestias blanditiis dolorem sunt. At quia nihil delectus eos aut.'
+                        user:
+                          type: object
+                          properties:
+                            id:
+                              type: integer
+                              example: 1
+                            name:
+                              type: string
+                              example: 'Prof. Winona Veum'
+                        created_at:
+                          type: string
+                          example: '2024-06-23T10:02:05.000000Z'
+                  links:
+                    type: object
+                    properties:
+                      first:
+                        type: string
+                        example: '/?page=1'
+                      last:
+                        type: string
+                        example: null
+                      prev:
+                        type: string
+                        example: null
+                      next:
+                        type: string
+                        example: null
+                  meta:
+                    type: object
+                    properties:
+                      current_page:
+                        type: integer
+                        example: 1
+                      from:
+                        type: integer
+                        example: 1
+                      path:
+                        type: string
+                        example: /
+                      per_page:
+                        type: integer
+                        example: 20
+                      to:
+                        type: integer
+                        example: 2
+      tags:
+        - Posts
+    post:
+      summary: 'Store a newly created resource in storage.'
+      operationId: storeANewlyCreatedResourceInStorage
+      description: ''
+      parameters: []
+      responses:
+        201:
+          description: 'new post'
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  data:
+                    id: 1
+                    content: 'Voluptatibus quas molestias eum porro. Voluptas ut blanditiis eligendi modi praesentium earum amet. Laboriosam porro velit sunt laboriosam repudiandae cum expedita. Et aliquam distinctio maxime blanditiis.'
+                    user:
+                      id: 1
+                      name: 'Judson Bartell'
+                    created_at: '2024-06-23T10:02:05.000000Z'
+                properties:
+                  data:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                        example: 1
+                      content:
+                        type: string
+                        example: 'Voluptatibus quas molestias eum porro. Voluptas ut blanditiis eligendi modi praesentium earum amet. Laboriosam porro velit sunt laboriosam repudiandae cum expedita. Et aliquam distinctio maxime blanditiis.'
+                      user:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                            example: 1
+                          name:
+                            type: string
+                            example: 'Judson Bartell'
+                      created_at:
+                        type: string
+                        example: '2024-06-23T10:02:05.000000Z'
+      tags:
+        - Posts
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                content:
+                  type: string
+                  description: ''
+                  example: doloribus
+              required:
+                - content
+  '/api/posts/{id}':
+    get:
+      summary: 'Display the specified resource.'
+      operationId: displayTheSpecifiedResource
+      description: ''
+      parameters: []
+      responses:
+        200:
+          description: 'show post'
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  data:
+                    id: 1
+                    content: 'Eaque sit est adipisci illum ad. Ea et reprehenderit corporis itaque. Fugiat et odio rerum et. Corrupti molestiae minus illum temporibus.'
+                    user:
+                      id: 1
+                      name: 'Ezekiel Schmitt I'
+                    created_at: '2024-06-23T10:02:05.000000Z'
+                properties:
+                  data:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                        example: 1
+                      content:
+                        type: string
+                        example: 'Eaque sit est adipisci illum ad. Ea et reprehenderit corporis itaque. Fugiat et odio rerum et. Corrupti molestiae minus illum temporibus.'
+                      user:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                            example: 1
+                          name:
+                            type: string
+                            example: 'Ezekiel Schmitt I'
+                      created_at:
+                        type: string
+                        example: '2024-06-23T10:02:05.000000Z'
+      tags:
+        - Posts
+    put:
+      summary: 'Update the specified resource in storage.'
+      operationId: updateTheSpecifiedResourceInStorage
+      description: ''
+      parameters: []
+      responses:
+        200:
+          description: 'update post'
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  data:
+                    id: 1
+                    content: 'Eligendi voluptas ea qui et aperiam. Nobis atque similique minima explicabo.'
+                    user:
+                      id: 1
+                      name: 'Emmanuel Hermann'
+                    created_at: '2024-06-23T10:02:05.000000Z'
+                properties:
+                  data:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                        example: 1
+                      content:
+                        type: string
+                        example: 'Eligendi voluptas ea qui et aperiam. Nobis atque similique minima explicabo.'
+                      user:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                            example: 1
+                          name:
+                            type: string
+                            example: 'Emmanuel Hermann'
+                      created_at:
+                        type: string
+                        example: '2024-06-23T10:02:05.000000Z'
+        403:
+          description: 'User cannot update post that doesnt belong to him.'
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: Unauthorized
+                properties:
+                  message:
+                    type: string
+                    example: Unauthorized
+      tags:
+        - Posts
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                content:
+                  type: string
+                  description: ''
+                  example: culpa
+              required:
+                - content
+    delete:
+      summary: 'Remove the specified resource from storage.'
+      operationId: removeTheSpecifiedResourceFromStorage
+      description: ''
+      parameters: []
+      responses:
+        204:
+          description: 'Post deleted successfully.'
+        403:
+          description: 'User cannot delete post that doesnt belong to him.'
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: Unauthorized
+                properties:
+                  message:
+                    type: string
+                    example: Unauthorized
+      tags:
+        - Posts
+    parameters:
+      -
+        in: path
+        name: id
+        description: 'The ID of the post.'
+        example: 14
+        required: true
+        schema:
+          type: integer
 tags:
   -
     name: Endpoints
+    description: ''
+  -
+    name: Posts
     description: ''
